fix page linking

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <hr />
     <ul>
       <li><a href="#">HW1: Introduction</a></li>
-      <li><a href="/HW2/index.html">HW2: Business Website</a></li>
-      <li><a href="/HW3/songList.xml">HW3: XML Songlist</a></li>
-      <li><a href="/HW4/index.html">HW4: Joe's Hotdogs</a></li>
-      <li><a href="/HW5/lottery.html">HW5: Lottery</a></li>
-      <li><a href="/HW6/index.html">HW6: Amicable Numbers</a></li>
-      <li><a href="/HW9/songList.html">HW9: JSON Song List</a></li>
-      <li><a href="/HW10/catApi.html">HW10: API Fun</a></li>
+      <li><a href="./HW2/index.html">HW2: Business Website</a></li>
+      <li><a href="./HW3/songList.xml">HW3: XML Songlist</a></li>
+      <li><a href="./HW4/index.html">HW4: Joe's Hotdogs</a></li>
+      <li><a href="./HW5/lottery.html">HW5: Lottery</a></li>
+      <li><a href="./HW6/index.html">HW6: Amicable Numbers</a></li>
+      <li><a href="./HW9/songList.html">HW9: JSON Song List</a></li>
+      <li><a href="./HW10/catApi.html">HW10: API Fun</a></li>
 
     </ul>
 </html>
