--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="./HW4/index.html">HW4: Joe's Hotdogs</a></li>
       <li><a href="./HW5/lottery.html">HW5: Lottery</a></li>
       <li><a href="./HW6/index.html">HW6: Amicable Numbers</a></li>
+      <li><a href="./HW8/jade_delight.html">HW8: Jade Delight</a></li>
       <li><a href="./HW9/songList.html">HW9: JSON Song List</a></li>
       <li><a href="./HW10/catApi.html">HW10: API Fun</a></li>
 
