--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href="./HW8/jade_delight.html">HW8: Jade Delight</a></li>
       <li><a href="./HW9/songList.html">HW9: JSON Song List</a></li>
       <li><a href="./HW10/catApi.html">HW10: API Fun</a></li>
+      <li><a href="./HW12/jade_delight.php">HW12: Jade Delight 2</a></li>
 
     </ul>
 </html>
